# routes/books.js
@@ -16,25 +16,27 @@ const {
   getOneBook,
 } = require("../controllers/books");
 
-//Get all Books
+//Get one Book
 router.post("/one", getOneBook);
+//Get all Books in database
 router.get("/all", getAllBooks);
-//Get Books created by userid
-router.get("/allUser", getAllUserCreated);
 //Get Books from users createdFavoritesArray
 router.get("/allUserArray", getAllUserCreatedFromArray);
 //Get Books from users savedFavoritesArray
 router.get("/allSavedArray", getAllUserSavedFromArray);
-router.get("/allSaved", getAllUserSaved); //??
 //Post new Book (append to createdFavoritesArray)
 router.post("/addBook", addBook);
 //Save favorite
 router.post("/saveBook", saveBook);
 //Remove favorite
 router.post("/removeBook", removeBook);
+//Toggle saved/removed favorite
 router.post("/toggleHeart", toggleHeart);
+//Delete a book
 router.delete("/delete", deleteBook);
+//Add comment to book
 router.post("/addComment", addComment);
+//Delete comment from book
 router.post("/deleteComment", deleteComment);
 
 module.exports = router;
